--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "fastify": "^3.15.0",
+    "fastify-cookie": "^5.3.0",
     "fastify-http-proxy": "^5.0.0",
-    "hyperid": "^2.1.0"
+    "hyperid": "^2.1.0",
+    "openid-client": "^4.7.2",
+    "passport": "^0.4.1"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
