--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@types/redis": "^2.8.28",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "crypto-js": "^4.0.0",
     "fastify": "^3.15.0",
     "fastify-cookie": "^5.3.0",
     "fastify-healthcheck": "^3.1.0",
@@ -20,7 +22,8 @@
     "os": "^0.1.1",
     "passport": "^0.4.1",
     "path": "^0.12.7",
-    "pkg-dir": "^5.0.0"
+    "pkg-dir": "^5.0.0",
+    "redis": "^3.1.2"
   },
   "scripts": {
     "build": "tsc",
