--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@sentry/node": "^6.4.0",
+    "@sentry/tracing": "^6.4.0",
     "@types/redis": "^2.8.28",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
