--- a/config.example.json
+++ b/config.example.json
@@ -25,5 +25,8 @@
     "storeConfig": {
         "codeVerifierKeyName": "code_verifier",
         "tokenCookieName": "token"
+    },
+    "sentryConfig": {
+        "dsn": "<SENTRY DSN>"
     }
 }
