--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fastify-http-proxy": "^5.0.0",
     "fastify-status": "^2.2.1",
     "global": "^4.4.0",
+    "handy-redis": "^2.2.1",
     "hyperid": "^2.1.0",
     "nodemon": "^2.0.7",
     "openid-client": "^4.7.2",
