Build on release

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,6 +1,10 @@
 name: Build and Push Images
 
-on: [push]
+on:
+  push:
+  release:
+    types:
+      - released
 
 env:
   IMAGE: reg.dev.krd/common/backend-for-frontends
