--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,20 +1,21 @@
-name: Build and Push Images
+name: Tag Release Image
 
 on:
-  push:
-
+  release:
+    types:
+      - published
+      - prereleased
 env:
   IMAGE: reg.dev.krd/common/backend-for-frontends
 
 jobs:
-  build-push:
-    runs-on: self-hosted
+  deploy:
+    runs-on: self-hosted # run on self-hosted runner
     steps:
-      - name: Get branch name
-        uses: nelonoel/branch-name@v1.0.1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Get tag name
+        shell: bash
+        run: |
+          echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Login to DIT Registry
         uses: docker/login-action@v1
@@ -27,8 +28,7 @@ jobs:
         uses: docker/build-push-action@v2.4.0
         with:
           push: true
-          cache-from: type=registry,ref=${{ env.IMAGE }}:${{ env.BRANCH_NAME }}
+          cache-from: type=registry,ref=${{ env.IMAGE }}:${{ github.sha }}
           cache-to: type=inline
           tags: |
-            ${{ env.IMAGE }}:${{ github.sha }}
-            ${{ env.IMAGE }}:${{ env.BRANCH_NAME }}
+            ${{ env.IMAGE }}:${{ env.TAG_NAME }}
