--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,17 @@ services:
     image: 'bitnami/redis:latest'
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
-    container_name: redis
-    ports:
-      - "6379:6379"
+    network_mode: host
+  bff:
+    depends_on: 
+      - redis
+    image: 'reg.dev.krd/common/backend-for-frontends:dev'
+    environment: 
+      - REDIS__CONNECTION_STRING=redis://localhost:6379
+    volumes:
+      - ./config/local.json:/app/config/default.json
+    network_mode: host
+# networks:
+#   default:
+#     external: true
+#     name: host
