--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -8,12 +8,14 @@ on:
 env:
   IMAGE: reg.dev.krd/common/backend-for-frontends
 
+concurrency: build-${{ github.ref }}
+
 jobs:
   build-push:
     runs-on: self-hosted
     steps:
-      - name: Get branch name
-        uses: nelonoel/branch-name@v1.0.1
+      - name: Extract branch name
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
