--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
   },
   "devDependencies": {
     "@types/config": "^0.0.38",
+    "@types/crypto-js": "^4.0.2",
     "@types/node": "^14.14.41",
     "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
   }
