--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,13 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": 
+    [
         {
-            "type": "pwa-chrome",
+            "command": "yarn start:dev",
+            "name": "Debug",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:3002",
-            "webRoot": "${workspaceFolder}"
+            "type": "node-terminal"
         }
     ]
 }
