--- a/package.json
+++ b/package.json
@@ -24,16 +24,11 @@
     "fastify-healthcheck": "^3.1.0",
     "fastify-http-proxy": "^5.0.0",
     "fastify-status": "^2.2.1",
-    "global": "^4.4.0",
     "handy-redis": "^2.2.1",
     "hyperid": "^2.1.0",
     "openid-client": "^4.7.2",
     "os": "^0.1.1",
-    "passport": "^0.4.1",
-    "path": "^0.12.7",
-    "pkg-dir": "^5.0.0",
-    "redis": "^3.1.2",
-    "ts-node": "^9.1.1"
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "@types/config": "^0.0.38",
@@ -49,6 +44,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
 }
