--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -12,7 +12,7 @@ concurrency: build-${{ github.ref }}
 
 jobs:
   build-push:
-    runs-on: self-hosted
+    runs-on: [self-hosted, ubuntu-focal]
     steps:
       - name: Extract branch name
         run: echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
