--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,6 @@ updates:
     directory: "/"
     target-branch: dev
     schedule:
-      interval: "daily"
+      interval: "weekly"
     reviewers:
       - "ditkrg/digital-development-node-js"
