--- a/package.json
+++ b/package.json
@@ -14,19 +14,17 @@
     "start:compiler": "tsc -w"
   },
   "dependencies": {
+    "@fastify/cookie": "^7.0.0",
+    "@fastify/http-proxy": "^8.0.2",
+    "@redis/client": "^1.1.0",
     "@sentry/node": "^6.19.6",
-    "body-parser": "^1.19.0",
     "config": "^3.3.6",
-    "cookie-parser": "^1.4.6",
-    "fastify": "^3.28.0",
-    "fastify-cookie": "^5.6.1",
-    "fastify-healthcheck": "^3.1.0",
-    "fastify-http-proxy": "^6.2.2",
+    "fastify": "^4.1.0",
+    "fastify-healthcheck": "^4.0.0",
     "fastify-status": "^2.2.1",
     "hyperid": "^3.0.1",
-    "openid-client": "^4.9.1",
-    "os": "^0.1.2",
-    "redis": "^4.0.6"
+    "openid-client": "^5.1.7",
+    "os": "^0.1.2"
   },
   "devDependencies": {
     "@types/config": "^0.0.38",
