--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,7 @@
-version: '3.1'
+---
+version: "3"
 services:
   redis:
-    image: 'bitnami/redis:latest'
-    environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-    network_mode: host
-  bff:
-    depends_on: 
-      - redis
-    image: 'reg.dev.krd/common/backend-for-frontends:dev'
-    environment: 
-      - REDIS__CONNECTION_STRING=redis://localhost:6379
-    volumes:
-      - ./config/local.json:/app/config/default.json
-    network_mode: host
-# networks:
-#   default:
-#     external: true
-#     name: host
+    image: redis:6-alpine
+    ports:
+      - 6379:6379
